updated index and favicon

--- a/_includes/last-series.html
+++ b/_includes/last-series.html
@@ -1,6 +1,6 @@
 {% assign books = site.data.books %}
 {% for book in books %}
-{% if book.Title == "Semantics of the World: selected poems" %}
+{% if book.Number == "last" %}
 <h1 class="book">{{ book.Title }}</h1>
 <div class="obra-dia sombra">
 <div class="ficha-container" style="">
