--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -22,20 +22,13 @@ layout: default
         
         <!--Some other book translations -->        
         <div class="row obras obra-suerte">
-            <h2 class="index">Some book translations</h2>
-        </div>
-        {% include book-list-translations.html %}
-
-
-        <!--Some other book translations -->        
-        <div class="row obras obra-suerte">
-            <h2 class="index">Some book translations</h2>
+            <h2 class="index">Other book translations</h2>
         </div>
         {% include book-list-translations.html %}
        
         <!--Descargables-->
         <div class="row obras">
-            <h2 class="index">Some books for download</h2>
+            <h2 class="index">Books for download</h2>
         </div>
         {% include book-list-download.html %}
 
