--- a/_includes/forthcoming-list.html
+++ b/_includes/forthcoming-list.html
@@ -1,23 +1,8 @@
   <!--lista 1 -->
         <div class="row">
             <!--LOOP DE LISTA 1-->
-            {% assign number = site.data.books.size %}
-            {% assign books = site.data.books | sample: number %}
-            {% assign limit = 7 %}
-            {% assign counter = 0 %}
+            {% assign books = site.data.books | where: "Number", "fc"  %}
             {% for book in books %}
-                {% if book.Number and counter < limit %}
-                    {% include book-list-base.html %}
-                    {% assign counter = counter | plus: 1 %}
-                {% endif %}
+            {% include book-list-base.html %}
             {% endfor %}
-            <div class="basis masobras">
-                <div class="container">
-                    <label for="listas"><img src="{{ site.BASE_PATH }}/assets/img/tema/+obras.png" class="image sombra"></label>
-                    <div>
-                        {% assign target = "downloads" %}
-                        {% include ver-mas.html %}
-                    </div>
-                </div> 
-            </div>
         </div>
