fixed links on site-description

--- a/_includes/site-description.html
+++ b/_includes/site-description.html
@@ -3,7 +3,7 @@
 <p>The collection is developed to promote Afro-Latin American Writers in Translation: a series of critial editions of celebrated works in translation coordinated by professor Mark A. Sanders and aimed to advance research and academic reflection on the Black presence in Latin America and its influence across the Americas.</p>
 
 <!-- more -->
-<p>ALAWiT is organized by dynamic lists, which group the works according to common characteristics (<a href="/chriteria/author">authors</a>, <a href="/chriteria/city">city of publication</a>, <a href="/chriteria/publisher">imprint or publisher</a>, <a href="/chriteria/nationality">nationality of authors</a>, <a href="/chriteria/edition">edition date</a> and <a href="/chriteria/repository">digital repository</a>). But it also has a <a href="/search">search engine</a> that allows you to find works directly.</p>
+<p>ALAWiT is organized by dynamic lists, which group the works according to common characteristics (<a href="{{ site.BASE_PATH }}/chriteria/author">authors</a>, <a href="{{ site.BASE_PATH }}/chriteria/city">city of publication</a>, <a href="{{ site.BASE_PATH }}/chriteria/publisher">imprint or publisher</a>, <a href="{{ site.BASE_PATH }}/chriteria/nationality">nationality of authors</a>, <a href="{{ site.BASE_PATH }}/chriteria/edition">edition date</a> and <a href="{{ site.BASE_PATH }}/chriteria/repository">digital repository</a>). But it also has a <a href="{{ site.BASE_PATH }}/search">search engine</a> that allows you to find works directly.</p>
 
 <p>Today there are approximately 89 books available on ALAWiT, organized by 118 authors, 89 presses and publishers, and 31 repositories. In addition, 31 more works are in progress.</p>
 
@@ -11,6 +11,6 @@
 
 <p>By making Afro-Latin American writers more readily available to a North American audience, the works in the series and the website will deepen our understanding of writing and race in New World History. They will furher provide a complementary critical history of the literaty lives and the ever-evolving print cultures found across Afro-Latin American history and culture.</p>
 
-<p>In its first stage, the website has been fed by the compilations of Mark Sanders, Paulette Ramsay, Antonio D Tillis, Keenan Norris, Idelfonso Pereda Valdés and Emilio Vallagas. But the archive is open for users and beneficiaries of the platform to <a href="/add">add new content</a>.</p>
+<p>In its first stage, the website has been fed by the compilations of Mark Sanders, Paulette Ramsay, Antonio D Tillis, Keenan Norris, Idelfonso Pereda Valdés and Emilio Vallagas. But the archive is open for users and beneficiaries of the platform to <a href="{{ site.BASE_PATH }}/add">add new content</a>.</p>
 
-<p>If you have a work or translation in mind that is not part of this archive, please <a href="/add">suggest its incorporation</a></p>
+<p>If you have a work or translation in mind that is not part of this archive, please <a href="{{ site.BASE_PATH }}add">suggest its incorporation</a></p>
